# markdown-filename-to-kebab-case

./: LICENSE  README.md  pyproject.toml  setup.py
docs/: epics-features-and-user-stories.md
docs/epics/: 1-epic-automate-markdown-filename-renaming.md
docs/features/: 1.1-feature-select-validate-directory.md  1.2-feature-identify-markdown-files.md  1.3-feature-generate-filenames-from-h1.md  1.4-feature-intelligent-cleaning.md  1.5-feature-handle-extensions-conflicts.md  1.6-feature-robust-pythonic.md
docs/prompts/: Prompt - Python Code Generation Prompt Guidance.md  prompt-rename-markdown-files.prompt.md
docs/tasks/: 1.1.1.1-handle-directory-path-prompt-and-validation.md  1.2.1.1-identify-markdown-files-in-directory.md  1.3.1.1-extract-h1-header-or-fallback.md  1.4.1.1-convert-special-characters-to-readable.md  1.4.2.1-remove-invalid-filename-characters.md  1.4.3.1-convert-to-kebab-case.md  1.4.3.1-test-failing-kebab-case.md  1.4.3.2-implement-kebab-case-conversion.md  1.4.3.3-test-passing-kebab-case.md  1.4.3.4-test-negative-kebab-case.md
docs/user-stories/: 1.1.1-user-story-provide-directory-path.md  1.2.1-user-story-find-all-markdown-files.md  1.3.1-user-story-extract-h1-header.md  1.4.1-user-story-special-chars-to-readable.md  1.4.2-user-story-remove-invalid-filename-chars.md  1.4.3-user-story-kebab-case.md  1.5.1-user-story-extension-normalization.md  1.5.2-user-story-skip-correctly-named.md  (+3 more)
src/: convert_to_kebab_case.py
tests/: test_1.4.1.1-convert-special-characters-to-readable.py  test_1.4.3.1-test-failing-kebab-case.py  test_convert_to_kebab_case.py
