[tool.poetry]
name = "markdown-filename-to-kebab-case"
version = "0.1.0"
description = "A tool for renaming markdown files to kebab-case."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
